bin/tests/errors_parser/parser/parser_err_expected_token_fam.swg
#global fileprivate

impl A.B. { } // swc-expected-error {{parser_err_expected_token_fam}}
